--- a/css/style.css
+++ b/css/style.css
@@ -119,3 +119,22 @@ icone:hover{
     cursor: pointer;
     transform: scale(1.2);
 }
+@media (min-width: 1025px) {
+	.photo {
+		width: 367px;
+		height: 684px;
+	}
+
+	.actions {
+		flex: initial;
+	}
+
+	.photo-and-actions {
+		justify-content: center;
+	}
+
+	.navbar {
+		width: 400px;
+		margin: auto;
+	}
+}
